tags colors and spacing fix

--- a/public/h/4/static/css/style.css
+++ b/public/h/4/static/css/style.css
@@ -13,7 +13,7 @@ input {height: 1.44rem;}
     width: 100%;
     height: max-content;
     justify-content: flex-start;
-    margin-top: 1rem;
+    margin: 1rem;
 }
 .tag {
     padding: 0.3em 0.6em;
@@ -38,7 +38,7 @@ input {height: 1.44rem;}
 }
 input[type='number'] {width: 3rem;}
 .submit-row {
-    margin: 1rem;
+    margin-right: 1rem;
     display: flex;
     justify-content: flex-end;
     align-items: baseline;
